# Willow_public

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  todo.md  wilo.hpp
APIs/Vulkan/: CMakeLists.txt
APIs/Vulkan/rendering/: CMakeLists.txt  vulkan_context.cpp  vulkan_context.hpp  vulkan_frame_buffer_array.cpp  vulkan_frame_buffer_array.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_render_task_manager.cpp  vulkan_render_task_manager.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
APIs/Vulkan/rendering/shaders/: shader.vert
APIs/Vulkan/vk/: CMakeLists.txt  Makefile  cmake_install.cmake  vkcore.cpp  vkcore.hpp  vkdevice.cpp  vkinit.hpp  vkswapchain.cpp  vkutil.hpp
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/application/: CMakeLists.txt  application.cpp  application.hpp  wilo_console.cpp  wilo_console.hpp
core/base/: CMakeLists.txt  KeyCodes.hpp  WiloConfig.h  logr.hpp  wilo_APICodes.hpp  wilo_dev_core.hpp  wilo_engine_element.cpp  wilo_engine_element.hpp  wilo_engine_manager.hpp  wilo_object_counter.cpp  wilo_object_counter.hpp
core/messaging/: CMakeLists.txt  keyboard_message.cpp  keyboard_message.hpp  mouse_message.cpp  mouse_message.hpp  wilo_message.hpp  wilo_observer.cpp  wilo_observer.hpp  wilo_observer_system.hpp  wilo_subject.cpp  wilo_subject.hpp  window_message.cpp  window_message.hpp
core/scripting/: CMakeLists.txt  wilo_lua_tools.cpp  wilo_lua_tools.hpp  wilo_scriptable.cpp  wilo_scriptable.hpp
core/scripts/: console_base.lua
core/window/: CMakeLists.txt  mac_window.cpp  mac_window.hpp  wilo_window.hpp  window.hpp
dev_core/: CMakeLists.txt  KeyCodes.hpp  Makefile  MouseCodes.hpp  cmake_install.cmake  logr.cpp  logr.hpp  wilo_dev_core.hpp  wilo_lua_tools.cpp  wilo_lua_tools.hpp
examples/: Cube.cpp
include/: willow.hpp
include/willow/: application.hpp  wilo_console.hpp
include/willow/ECS/: ECS.h
include/willow/dev-utils/: Helpers.h
include/willow/dev-utils/Vulkan/: vkcore.hpp  vkdevice.hpp  vkinit.hpp  vkswapchain.hpp  vktypes.hpp  vkutil.hpp  wilovk.hpp
include/willow/input/: KeyCodes.hpp  MouseCodes.hpp
include/willow/messaging/: Xylem.h  keyboard_message.hpp  mouse_message.hpp  wilo_message.hpp  wilo_observer.hpp  wilo_observer_system.hpp  wilo_subject.hpp  window_message.hpp
include/willow/rendering/: wilo_render_core.hpp  wilo_render_data_layout.hpp  wilo_renderer.hpp  wilo_rendering_API.hpp  wilo_shader.hpp  wilo_vertex_types.hpp
include/willow/rendering/Vulkan/: vulkan_context.hpp  vulkan_frame_buffer_array.hpp  vulkan_graphics_pipeline.hpp  vulkan_index_buffer.hpp  vulkan_render_buffer.hpp  vulkan_render_core.hpp  vulkan_render_pass.hpp  vulkan_render_task_manager.hpp  vulkan_shader.hpp  vulkan_swapchain.hpp  vulkan_uniform_buffer_array.hpp  vulkan_vertex_buffer.hpp
include/willow/root/: Root.hpp  WiloConfig.h  WiloConfig.h.in  logr.hpp  wilo_APICodes.hpp  wilo_dev_core.hpp  wilo_engine_element.hpp  wilo_object_counter.hpp
include/willow/scripting/: LuaBasics.h  Scriptable.hpp  wilo_lua_tools.hpp
include/willow/window/: mac_window.hpp  wilo_window.hpp  window.hpp
physics/: CMakeLists.txt  physicsObject.hpp  pointMass.cpp  pointMass.hpp
rendering/: CMakeLists.txt  wilo_renderer.cpp  wilo_renderer.hpp
rendering/base/: CMakeLists.txt  wilo_frame_buffer_array.hpp  wilo_graphics_pipeline.hpp  wilo_render_context.cpp  wilo_render_context.hpp  wilo_render_pass.hpp  wilo_render_task_manager.hpp  wilo_rendering_API.hpp  wilo_shader.hpp  wilo_swapchain.hpp
rendr/: CMakeLists.txt  Makefile  cmake_install.cmake  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  rendrtypes.hpp  wilorendr.hpp
rendr/shaders/: shader.frag  shader.vert
scripts/: scriptable_base.lua  startup.lua
scripts_engine/: startup.lua
shaders/: compile.bat  compile.sh  shader.frag  shader.vert  vert.spv
src/: CMakeLists.txt
src/willow/: application.cpp  wilo_console.cpp
src/willow/messaging/: Xylem.cpp  keyboard_message.cpp  mouse_message.cpp  wilo_observer.cpp  wilo_subject.cpp  window_message.cpp
src/willow/rendering/: wilo_renderer.cpp  wilo_shader.cpp
src/willow/rendering/Vulkan/: vkcore.cpp  vkdevice.cpp  vkinit.cpp  vkswapchain.cpp  vkutil.cpp  vulkan_context.cpp  vulkan_frame_buffer_array.cpp  vulkan_graphics_pipeline.cpp  vulkan_index_buffer.cpp  vulkan_render_core.cpp  vulkan_render_pass.cpp  vulkan_render_task_manager.cpp  vulkan_shader.cpp  vulkan_swapchain.cpp  vulkan_uniform_buffer_array.cpp  vulkan_vertex_buffer.cpp
src/willow/root/: Root.cpp  logr.cpp  wilo_engine_element.cpp  wilo_object_counter.cpp
src/willow/scripting/: LuaBasics.cpp  Scriptable.cpp  wilo_lua_tools.cpp
src/willow/window/: mac_window.cpp
test/: CMakeLists.txt  GLFWWindowTest.cpp  ObserverMessageTest.cpp  XylemMessageTest.cpp
vk/: CMakeLists.txt  lsresults.txt  vkcore.cpp  vkcore.hpp  vkdevice.hpp  vkinit.cpp  vkswapchain.hpp  vktypes.hpp  vkutil.cpp  vkutil.hpp  wilovk.hpp
